# Jovi_Capture

./: README.md  __init__.py  node_list.json  pyproject.toml  requirements.txt  skip.json
core/: __init__.py  capture.py  node_monitor.py  node_remote.py  node_webcam.py  node_wemcam.py  node_window.py  stream.py
core/support/: image.py  stream.py
web/: node_webcam.js  node_window.js  util_jov.js  widget_vector.js
