[project]
name = "jovi_capture"
description = "Capture Webcamera and URL media streams as ComfyUI images"
version = "1.0.0"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
    "aenum>=3.1.15",
    "loguru",
    "numpy>=1.26.4,<2.0.0; python_version < '3.12'",
    "numpy>=2.0.0; python_version > '3.11'",
    "opencv-contrib-python"
]

[project.urls]
Homepage = "https://github.com/Amorano/Jovi_Capture"
Documentation = "https://github.com/Amorano/Jovi_Capture/wiki"
Repository = "https://github.com/Amorano/Jovi_Capture"
Issues = "https://github.com/Amorano/Jovi_Capture/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Jovi Capture"
Icon = "https://raw.githubusercontent.com/Amorano/Jovimetrix-examples/refs/heads/master/res/logo-jovi_capture.png"
