[project]
name = "jovi_capture"
description = "Capture Webcamera and URL media streams as ComfyUI images"
version = "1.0.12"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "git+https://github.com/cozy-comfyui/cozy_comfyui@main#egg=cozy_comfyui",
    "mss",
    "numpy<2",
    "opencv-contrib-python",
    "Pillow",
    "pyobjc-framework-Quartz; platform_system=='Darwin'",
    "pywin32; platform_system=='Windows'",
    "pywinctl",
    "Xlib; platform_system=='Linux'"
]

[project.urls]
Homepage = "https://github.com/Amorano/Jovi_Capture"
Documentation = "https://github.com/Amorano/Jovi_Capture/wiki"
Repository = "https://github.com/Amorano/Jovi_Capture"
Issues = "https://github.com/Amorano/Jovi_Capture/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Jovi Capture"
Icon = "https://raw.githubusercontent.com/Amorano/Jovimetrix-examples/refs/heads/master/res/logo-jovi_capture.png"
